# TerMoney

./: .gitignore  Cargo.toml  LICENSE  New.json  README.md  reg_template.json
src/: account.rs  floating_decimal.rs  main.rs  menu.rs  question.rs  transaction.rs  utils.rs
src/registry/: mod.rs
src/registry/transaction/: mod.rs  money.rs
src/transaction/: money.rs
