[package]
name = "termoney"
version = "0.2.3"
edition = "2021"
license="MIT"
description="It's a command-line application intended to help recording and managing simple financial records for personal use."
homepage="https://github.com/JuanCSUCoder/TerMoney"
repository="https://github.com/JuanCSUCoder/TerMoney"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = [ "derive" ] }
serde_json = "1.0.81"

chrono = { version = "0.4.19", features = [ "serde" ] }

term = "0.7.0"
prettytable-rs = "0.8.0"
